@@ -1,3 +1,9 @@
+mcabber (1.0.6-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.0.5)
 
  * Much better performances with huge rosters (Frank Zschockelt)
